# components

./: package.json
.circleci/: config.yml
scripts/saucelabs/: start-tunnel.sh
test/: BUILD.bazel  angular-test-init-spec.ts  bazel-karma-local-config.js  browser-providers.d.ts  karma-browsers.json  karma-saucelabs.conf.js
tools/: defaults.bzl  js_outputs.bzl
tools/saucelabs-bazel/: BUILD.bazel  browser.ts  ipc-defaults.ts  ipc-messages.ts
tools/saucelabs-bazel/background-service/: BUILD.bazel  cli.ts  ipc.ts  saucelabs-daemon.ts
tools/saucelabs-bazel/launcher/: BUILD.bazel  index.ts  launcher.ts
