load("//tools:defaults.bzl", "js_library", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")

package(default_visibility = ["//visibility:public"])

exports_files([
    "bazel-karma-local-config.js",
    "karma-saucelabs.conf.js",
    "browser-providers.js",
    "karma-browsers.json",
])

# Common set-up for all Angular Material and CDK tests.
ts_library(
    name = "angular_test_init",
    testonly = True,
    # This file *must* end with "spec" in order for "karma_web_test_suite" to load it.
    srcs = ["angular-test-init-spec.ts"],
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
    ],
)

copy_to_bin(
    name = "karma-browser-config_bin",
    srcs = [
        "browser-providers.js",
        "browser-providers.d.ts",
        "karma-browsers.json",
    ],
)

js_library(
    name = "karma-browser-config",
    srcs = [
        "browser-providers.js",
        "browser-providers.d.ts",
        "karma-browsers.json",
        ":karma-browser-config_bin",
    ],
)

js_library(
    name = "karma_local_testing_config_lib",
    srcs = ["bazel-karma-local-config.js"],
    deps = ["@npm//karma-spec-reporter"],
)

js_library(
    name = "karma_saucelabs_config_lib",
    srcs = ["karma-saucelabs.conf.js"],
    deps = [
        ":karma-browser-config",
        "//tools/saucelabs-bazel/launcher",
        "@npm//@bazel/runfiles",
        "@npm//karma-spec-reporter",
    ],
)
