load("//tools:defaults.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "background-service",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//tools/saucelabs-bazel:saucelabs-bazel",
        "//test:karma-browser-config",
        "@npm//@types/node",
        "@npm//@types/selenium-webdriver",
        "@npm//chalk",
    ],
    devmode_module = "commonjs",
)

nodejs_binary(
    name = "cli",
    data = [":background-service"],
    entry_point = ":cli.ts",
)
