load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "launcher",
    srcs = [
        "index.ts",
        "launcher.ts",
    ],
    deps = [
        "//tools/saucelabs-bazel:saucelabs-bazel",
        "@npm//@types/node",
    ],
    devmode_module = "commonjs",
)
